1.2.2:

2006-08-21  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* NEWS: update for 1.2.2
	* configure.in: bump to next even number (1.2.2)

2006-08-21  Cedric Gustin  <cedric.gustin@gmail.com>

	* cairomm/win32_surface.cc: Explicitly cast Cairo::Format to
	cairo_format_t.
	
2006-08-20  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* Makefile.am: fix up the release announcement template to explain what
	cairomm is at the top of the email before telling where to get it.
	* configure.in: post-release bump (1.2.1)

1.2.0:

2006-08-20  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* NEWS: Update information about new stuff in 1.2.0
	* configure.in: bump the release version number to 1.2.0 and the shared
	library version number to 1:0:0 since interfaces were changed and added and
	we're now guaranteeing API/ABI stability

2006-08-20  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* examples/pdf-surface/.cvsignore:
	* examples/png_file/.cvsignore:
	* examples/ps-surface/.cvsignore:
	* examples/svg-surface/.cvsignore: added image files produced by the example
	programs to .cvsignore

2006-08-19  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* Makefile.am: get rid of the concept of a snapshot.  It doesn't really make
	that much sense for cairomm, honestly, since we're just a simple wrapper
	library.

2006-08-19  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* MSVC/examples/.cvsignore:
	* MSVC/examples/Makefile.am:
	* MSVC/examples/pdf-surface/.cvsignore:
	* MSVC/examples/pdf-surface/Makefile.am:
	* MSVC/examples/pdf-surface/pdf-surface.vcproj:
	* MSVC/examples/png_file/.cvsignore:
	* MSVC/examples/png_file/Makefile.am:
	* MSVC/examples/png_file/png_file.vcproj:
	* MSVC/examples/ps-surface/.cvsignore:
	* MSVC/examples/ps-surface/Makefile.am:
	* MSVC/examples/ps-surface/ps-surface.vcproj:
	* MSVC/examples/svg-surface/.cvsignore:
	* MSVC/examples/svg-surface/Makefile.am:
	* MSVC/examples/svg-surface/svg-surface.vcproj: