@@ -1,3 +1,10 @@
+2006-09-27  Murray Cumming  <murrayc@murrayc.com>
+
+	* cairomm/refptr.h: cast_static() and cast_dynamic(): 
+	Use the refcount_() accessor instead of the member variable, 
+	to avoid compilation errors, as we already doing in the 
+	templated copy constructor.
+
 1.2.2:
 
 2006-08-21  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
